# oidc-inspector

./: LICENSE  README.md  pyproject.toml
docs/: endpoints.md  oidc-flow.md  testing.md
local-oidc/: README.md  compose.yaml
local-oidc/keycloak-config/: realm.json
oidc_inspector/: __init__.py  callback_server.py  config.py  discovery.py  display.py  jwt_decoder.py  main.py  pkce.py  token_client.py  userinfo.py
tests/: conftest.py  test_discovery.py  test_jwt_decoder.py  test_pkce.py  test_token_client.py
