[tool.poetry]
name = "oidc-inspector"
version = "0.1.0"
description = "A CLI tool to inspect and debug OpenID Connect authorization flows"
authors = ["OIDC Inspector Contributors"]
readme = "README.md"
license = "Apache-2.0"
packages = [{include = "oidc_inspector"}]
keywords = ["oidc", "oauth2", "authentication", "openid-connect", "debugging", "security"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Topic :: Security",
    "Topic :: Internet :: WWW/HTTP",
    "Programming Language :: Python :: 3.14",
]

[tool.poetry.dependencies]
python = "^3.14"
click = "^8.1"
httpx = "^0.27"
rich = "^13.7"
PyJWT = {version = "^2.8", extras = ["crypto"]}

[tool.poetry.group.dev.dependencies]
pytest = "^8.0"
pytest-httpx = "^0.30"

[tool.poetry.scripts]
oidc-inspector = "oidc_inspector.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"
